# customer-churn

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
customer_churn/: configs.py  logger.py
customer_churn/api/: deps.py  server.py
customer_churn/api/core/: model.py
customer_churn/api/ml/: routes.py  schemas.py
customer_churn/ml/: configs.py
customer_churn/ml/data/: dataset.py  transforms.py  utils.py
customer_churn/ml/inference/: predictor.py
customer_churn/ml/models/: model.py
customer_churn/ml/training/: trainer.py  utils.py
notebooks/: data.ipynb  model.ipynb
scripts/: train.py
