[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = ""
authors = ["Mamdouhito"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
numpy = "^2.1.3"
polars = "^1.13.1"
matplotlib = "^3.9.2"
rich = "^13.9.4"
pyarrow = "^18.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
